# aic-pipeline

./: .gitignore  .pre-commit-config.yaml  git-convention.md
backend/: .env.example  README.md  pyproject.toml
backend/auto-research/dake-cadre/: .gitignore  benchmark.py  experiment-handoff.md  prepare.py  program.md  train.py
backend/auto-research/dake-vbs/: prepare.py  program.md  results.tsv  train.py
backend/src/: app_config.py  main.py
backend/src/aic_pipeline/: __init__.py
backend/src/keyframe_extraction/: cadre.py  dake.py  extractor.py  models.py
backend/src/keyframes/: README.md  __init__.py  __main__.py  cli.py  config.py  ffmpeg.py  manifest.py  models.py  selector.py  video_database.py  workflow.py
backend/tests/integration/: test_health_api.py  test_keyframe_extractor.py
backend/tests/unit/: test_app_config.py  test_server_bootstrap.py
backend/tests/unit/keyframe_extraction/: test_cadre.py  test_dake.py  test_extractor.py  test_selection.py
docs/: PROGRESS.md
docs/aic-knowledge/: 01-seminar-hcmaic26-detailed.md  02-competition-query-catalog.md  03-aic-pipeline-architecture-notes.md  README.md  reference-flow-ver-1.md
docs/brds/: 00-project-overview.md  01-stakeholders-scope.md  02-business-workflow.md  03-functional-requirements.md  04-business-rules.md  05-state-machine.md  06-domain-model.md  07-non-functional-risk.md  08-acceptance-mvp-future.md
docs/technical/: 00-system-overview.md  01-roles-permissions.md  02-module-breakdown.md  03-domain-model.md  04-database-design.md  05-api-design.md  06-main-workflows.md  (+5 more)
