[project]
name = "aic-pipeline"
version = "0.1.0"
description = "AIC pipeline backend"
readme = "README.md"
authors = [
    { name = "Nguyen Minh Phu", email = "minfus391@gmail.com" }
]
requires-python = ">=3.11.3"
dependencies = [
    "av>=18.0.0",
    "fastapi>=0.139.0",
    "numpy>=2.0",
    "pydantic-settings>=2.14.2",
    "uvicorn>=0.49.0",
]

[project.scripts]
aic-pipeline = "src.main:serve"

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "black>=26.5.1",
    "httpx2>=2.5.0",
    "isort>=8.0.1",
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
pythonpath = [".", "src"]

[tool.uv.build-backend]
module-name = "src"
module-root = ""
